crux-mir/test/symb_eval/alloc/uninit_read.good
test uninit_read/<DISAMB>::crux_test[0]: FAILED

failures:

---- uninit_read/<DISAMB>::crux_test[0] counterexamples ----
[Crux] Found counterexample for verification goal
[Crux]   test/symb_eval/alloc/uninit_read.rs:9:9: 9:23: error: in uninit_read/<DISAMB>::crux_test[0]
[Crux]   no value at offset 3, in aggregate of size 10
[Crux] Found counterexample for verification goal
[Crux]   test/symb_eval/alloc/uninit_read.rs:9:9: 9:23: error: in uninit_read/<DISAMB>::crux_test[0]
[Crux]   attempted to read empty mux tree

[Crux] Overall status: Invalid.
